--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "engines": {"node": "22.12.0"},
+  "engines": {
+    "node": "22.12.0"
+  },
   "name": "major-project-1",
   "version": "1.0.0",
   "main": "index.js",
@@ -22,6 +24,7 @@
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
