--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "name": "major-project-1",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
